<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.24">
  <POU Name="FB_IdBaseSendDch" Id="{a4b014bb-b9d6-4e86-9224-d9482766764c}">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_IdBaseSendDch EXTENDS FB_DataChannelSendBase IMPLEMENTS I_DataChannelSend
VAR_INPUT
END_VAR
VAR_OUTPUT
END_VAR
VAR CONSTANT
END_VAR
VAR
// Saber Inteface Variables
// -----------------------------------------------------------------
	m_pOutputData				: POINTER TO T_IdBase_DCH;

// Local Variables
// -----------------------------------------------------------------
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[SUPER^();]]></ST>
    </Implementation>
    <Method Name="SendData" Id="{2a0d1510-df77-4cb6-a99b-d5b00629abc8}">
      <Declaration><![CDATA[METHOD PUBLIC SendData : BOOL
VAR_INPUT
	udiDataSize				: UDINT;
	pData					: POINTER TO BYTE;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[SendData := FALSE;

IF m_eState = E_PlcSaberDHCState.WaitForJob THEN
	IF (udiDataSize > 0 ) AND (pData <> TC3_MEMMAN.NULL) THEN
		TC2_SYSTEM.MEMCPY(destAddr := m_pOutputData, srcAddr := pData, n := udiDataSize);
		m_eState := E_PlcSaberDHCState.SendData;	
		SendData := TRUE;
	END_IF	
END_IF]]></ST>
      </Implementation>
    </Method>
    <Method Name="InitChannel" Id="{3262bbd2-842e-4d8a-aaca-af6823324b17}">
      <Declaration><![CDATA[METHOD PUBLIC InitChannel : BOOL
VAR_INPUT
	udiDataSize					: UDINT;
	pOutputData					: POINTER TO BYTE;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[InitChannel := FALSE;

IF udiDataSize > 0 THEN
	IF pOutputData <> TC3_MEMMAN.NULL THEN
		m_uinDataSize := udiDataSize;
		m_pOutputData := pOutputData;
		m_eState := E_PlcSaberDHCState.Init;
		InitChannel := TRUE;
	END_IF
END_IF
]]></ST>
      </Implementation>
    </Method>
    <ObjectProperties>
      <XmlArchive>
        <Data>
          <o xml:space="preserve" t="POUImageProperty">
            <n n="ImageData" />
            <v n="TransparencyColor">"White"</v>
            <v n="MakeTransparent">false</v>
          </o>
        </Data>
        <TypeList>
          <Type n="Boolean">System.Boolean</Type>
          <Type n="POUImageProperty">{bb741845-1ec5-4be9-bb0d-2cf7058af574}</Type>
          <Type n="String">System.String</Type>
        </TypeList>
      </XmlArchive>
    </ObjectProperties>
  </POU>
</TcPlcObject>